# 99-haskell-problems

./: .gitignore  99-haskell-problems.cabal  README.md  watchr_script
src/: Problems11_20.hs  Problems1_10.hs  Problems21_30.hs
src/edx/: HigherOrderFunctions.hs  StringTransmitter.hs  edx-exercises.hs  list-comprehensions.hs  recursions.hs
src/edx/lab/: ValidationCreditCardNumbers.txt  lab2-template.hs  lab3-template.hs
test/: Test.hs
