name:              99haskellproblems
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable 99-haskell-problems
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:   base

Test-Suite test-foo
    type:           exitcode-stdio-1.0
    hs-source-dirs: test, src
    main-is:        Test.hs
    build-depends:  base,
                    random,
                    HUnit,
                    QuickCheck,
                    test-framework,
                    test-framework-hunit,
                    test-framework-quickcheck2
    Ghc-Options:    -threaded -O0